# lhd049

./: .gitignore  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
src/: App.svelte  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Canvas.svelte  CanvasElement.svelte  DrawingCanvas.svelte  Header.svelte  ProjectManager.svelte  PropertiesPanel.svelte  SaveTemplateDialog.svelte  TapeLibrary.svelte  TemplateCard.svelte  TemplateLibrary.svelte  Toast.svelte
src/data/: templates.ts
src/services/: tauri.ts
src/stores/: brush.ts  project.ts  tape.ts  template.ts
src/styles/: theme.scss
src/types/: index.ts
src/utils/: drag.ts  recentProjects.ts  thumbnail.ts  toast.ts
