[package]
name = "washi-tape-designer"
version = "1.0.0"
description = "手账胶带排版预览桌面工具"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["fs-all", "dialog-all", "window-all", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
